<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical">

    <Button
        android:id="@+id/happy_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginBottom="5dp"
        android:text="@string/happy"
        android:textAppearance="?android:textAppearanceSmall"
        android:onClick="getHappy"/>

    <Button
        android:id="@+id/sad_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/sad"
        android:textAppearance="?android:textAppearanceSmall"
        android:onClick="getSad"/>

    <Button
        android:id="@+id/drunk_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/drunk"
        android:textAppearance="?android:textAppearanceSmall"
        android:onClick="getDrunk"/>

    <Button
        android:id="@+id/angry_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/angry"
        android:textAppearance="?android:textAppearanceSmall"
        android:onClick="getAngry"/>

    <Button
        android:id="@+id/high_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/high"
        android:textAppearance="?android:textAppearanceSmall"
        android:onClick="getHigh"/>

    <Button
        android:id="@+id/excited_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/excited"
        android:textAppearance="?android:textAppearanceSmall"
        android:onClick="getExcited"/>

    <Button
        android:id="@+id/relaxed_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/relaxed"
        android:textAppearance="?android:textAppearanceSmall"
        android:onClick="getRelaxed"/>

    <Button
        android:id="@+id/lazy_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="5dp"
        android:text="@string/lazy"
        android:textAppearance="?android:textAppearanceSmall"
        android:onClick="getLazy"/>
    </LinearLayout>
</ScrollView>
